--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,5 @@
-body,
-html {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-        sans-serif;
+body, html {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0;
     margin: 0;
     max-width: 100%;
@@ -12,10 +9,10 @@ html {
 
 @media (prefers-color-scheme: dark) {
     body {
-        background: #000;
-        color: #fff;
+      background: #000;
+      color: #fff;
     }
-}
+  }
 
 #canvas {
     border-radius: 12px;
@@ -33,13 +30,13 @@ html {
 }
 
 .settings-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 20rem);
+    display: grid; 
+    grid-template-columns: repeat(3, 20rem); 
     gap: 2rem;
 }
 
 @media screen and (max-width: 1440px) {
     .settings-grid {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 1fr); 
     }
 }
