--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,3 +40,11 @@ body, html {
         grid-template-columns: repeat(3, 1fr); 
     }
 }
+
+#components-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 0.5rem;
+}
