--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -48,3 +48,21 @@ body, html {
     justify-content: start;
     gap: 0.5rem;
 }
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: start;
+    gap: 2rem;
+}
+
+.components-container-bg {
+    background: #303030;
+    border-radius: 12px;
+    padding: 1rem;
+}
+
+.mt-1 {
+    margin-top: 1rem;
+}
